--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.jackson.serialization.write-dates-as-timestamps=false  
+
+server.port=8080
+spring.datasource.url=jdbc:postgresql://localhost:5432/emp
+spring.datasource.username=hr
+spring.datasource.password=hr
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
