--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,16 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
-		</dependency>
+		</dependency>  
+		<!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf -->
+	<dependency>
+	    <groupId>org.thymeleaf</groupId>
+	    <artifactId>thymeleaf</artifactId>
+	    <version>3.0.15.RELEASE</version>
+	</dependency>
+      
 	</dependencies>
+	
 
 	<build>
 		<plugins>
